--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random puzzles</title>
-    <link rel="stylesheet" href="task1.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="icon"
         href="https://media.istockphoto.com/id/525508231/photo/moraine-lake-rocky-mountains-canada.jpg?s=612x612&w=0&k=20&c=a4pWewQGlZSblXWROA5o5ayaN5R7XPfDGOQ43B88IzY=">
 </head>
