--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         </section>
     </main>
-    <script src="task1.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
